--- a/css/index.css
+++ b/css/index.css
@@ -297,9 +297,11 @@ td {
   border-radius: 4px;
   padding: 0.2rem 0.6rem;
 }
-[data-popover][data-popover-pos='up']:hover::before {
-  opacity: 1;
-  transform: translate(-50%, -115%);
+@media (min-width: 991.98px) {
+  [data-popover-pos='up']:hover::before {
+    opacity: 1;
+    transform: translate(-50%, -120%);
+  }
 }
 .stun-message {
   position: fixed;
@@ -504,7 +506,6 @@ td {
 .header-inner {
   width: 100%;
   font-size: 18px;
-  background-color: rgba(45,46,48,0.7);
   height: 80vh;
 }
 .header-nav {
@@ -604,25 +605,18 @@ td {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url("/images/bg_pic.png") no-repeat center center;
-  background-size: cover;
+  background-color: rgba(45,46,48,0.7);
+  background: url("/images/bg_pic.png") no-repeat center/cover;
 }
 .header-info-inner {
   position: absolute;
   top: 50%;
-  right: 0;
   left: 0;
+  z-index: 1000;
   padding: 0 0.5rem;
+  width: 100%;
   text-align: center;
   transform: translateY(-50%);
-}
-.header-info-mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0);
 }
 .header-info-title {
   margin-bottom: 0.5rem;
@@ -642,6 +636,7 @@ td {
   color: #f00;
 }
 .footer-inner {
+  position: relative;
   padding: 1rem;
   font-size: 16px;
   text-align: center;
@@ -734,13 +729,16 @@ td {
   width: 100%;
   text-align: center;
 }
-.sidebar-ov-author__img {
+.sidebar-ov-author__avatar {
+  margin: 0 auto;
   width: 120px;
   height: 120px;
+}
+.sidebar-ov-author__avatar_img {
   opacity: 1;
   border-radius: 50%;
 }
-.sidebar-ov-author__img:hover {
+.sidebar-ov-author__avatar:hover .sidebar-ov-author__avatar_img {
   animation: avatar-shake 0.8s both ease-out;
 }
 .sidebar-ov-author__p {
@@ -1549,9 +1547,6 @@ td {
 .back2top-icon:hover {
   color: #fc6423;
 }
-.back2top[data-popover][data-popover-pos='up']:hover::before {
-  transform: translate(-50%, -125%);
-}
 .external-link i {
   margin: 0 0.1em 0 0.2em;
   font-size: 0.8em;
@@ -1630,9 +1625,6 @@ td {
 .sticky-top__i {
   color: #96f;
   transform: scale(1.2) rotate(45deg);
-}
-.sticky-top[data-popover][data-popover-pos='up']:hover::before {
-  transform: translate(-50%, -100%);
 }
 .archive .sticky-top {
   top: 50%;
@@ -1908,7 +1900,7 @@ td {
     width: auto;
     height: auto;
     background-color: rgba(45,46,48,0.7);
-    transform: translate(-1.5rem, header-nav-height);
+    transform: translate(-1.5rem, 50px);
   }
   .header-nav-menu-item {
     float: none;
